CLIC+Active-edge

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -529,7 +529,7 @@ author = "F. Krummenacher",
       month         = "Jul",
       year          = "2014",
       reportNumber  = "\href{http://cds.cern.ch/record/1742993}{CLICdp-Note-2014-002}",
-      %url           = "http://cds.cern.ch/record/1742993",
+      url           = "http://cds.cern.ch/record/1742993",
 }
 
 @article{DuarteRamos:1572989,
@@ -722,4 +722,22 @@ abstract = "The ROOT system in an Object Oriented framework for large scale data
       pages          = "S31-S36",
       doi            = "10.1016/j.nima.2010.04.081",
       SLACcitation   = "%%CITATION = NUIMA,A636,S31;%%"
+}
+
+@article{Tehrani:2015tla,
+      author         = "Tehrani, N. Alipour",
+      title          = "{Optimisation studies for the CLIC vertex-detector
+                        geometry}",
+      booktitle      = "{Proceedings, 2nd International Summer School on
+                        INtelligent Signal Processing for FrontIEr Research and
+                        Industry (INFIERI 2014): Paris, France, July 15-25, 2014}",
+      collaboration  = "CLIC detector and physics",
+      journal        = "JINST",
+      volume         = "10",
+      year           = "2015",
+      number         = "07",
+      pages          = "C07001",
+      doi            = "10.1088/1748-0221/10/07/C07001",
+      reportNumber   = "CLICdp-Conf-2015-002",
+      SLACcitation   = "%%CITATION = JINST,10,C07001;%%"
 }
