--- a/abstract.tex
+++ b/abstract.tex
@@ -7,14 +7,14 @@ the options for a future high-energy collider for the post-LHC era. It
 would allow for searches of new physics and simultaneously offers the
 possibility for precision measurements of standard model
 processes. The physics goals and experimental conditions at CLIC set
-high precision requirements on the vertex detector: a high pointing
-resolution of $3\,\micron$, very low mass of
-$0.2\%$~X\textsubscript{0} per layer, 10~ns time stamping capability
-and low power dissipation of 50~mW/cm\textsuperscript{2} compatibile
-with air-flow cooling. In this thesis, hybrid assemblies with thin
-active-edge planar sensors are characterised through calibrations,
-laboratory and test-beam measurements. Prototypes containing
-$50\,\micron$ to $150\,\micron$ thin planar silicon sensors
+high precision requirements on the vertex detector made of pixel
+detectors: a high pointing resolution of $3\,\micron$, very low mass
+of $0.2\%$~X\textsubscript{0} per layer, 10~ns time stamping
+capability and low power dissipation of 50~mW/cm\textsuperscript{2}
+compatibile with air-flow cooling. In this thesis, hybrid assemblies
+with thin active-edge planar sensors are characterised through
+calibrations, laboratory and test-beam measurements. Prototypes
+containing $50\,\micron$ to $150\,\micron$ thin planar silicon sensors
 bump-bonded to Timepix3 readout ASICs with $55\,\micron$ pitch are
 characterised in test beams at the CERN SPS in view of their detection
 efficiency and single-point resolution. A digitiser for AllPix, a
